Video: Instalación de Redux con tag script

--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
         and if the js component does not load the page 
         is not going to shown properly, so here the first loads the page and elements and after that the js is going to be loaded. Another 
         approach could be if you use the async property in the script tag. -->
-    <script  src="index.js"></script>
+    <!-- adding redux js (Redux installed) -->
+    <script src="https://unpkg.com/redux@4.1.2/dist/redux.min.js"></script>
+    <!-- <script src="https://unpkg.com/redux@4.1.2/dist/redux.js"></script> -->
+    <script  src="index-v2.js"></script>
 </body>
 </html>
