--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
     <!-- adding redux js (Redux installed) -->
     <script src="https://unpkg.com/redux@4.1.2/dist/redux.min.js"></script>
     <!-- <script src="https://unpkg.com/redux@4.1.2/dist/redux.js"></script> -->
-    <script  src="index-v2.js"></script>
+    <!-- <script  src="index-v2.js"></script> -->
+    
+    <script  src="js/store.js"></script>
+    <script  src="js/ui.js"></script>
+    <script  src="js/app.js"></script>
 </body>
 </html>
