--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootcamp - Javascript JJ001</title>
     <!-- Se recomienda tener los estilos de CSS en el head para que al cargar la pagina este pueda mostrarse de manera inmediata al usuario -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
+    <link href="./node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./node_modules/bootstrap-icons/font/bootstrap-icons.css">
 </head>
 <body>
     <main class="container">
@@ -73,12 +73,24 @@
         is not going to shown properly, so here the first loads the page and elements and after that the js is going to be loaded. Another 
         approach could be if you use the async property in the script tag. -->
     <!-- adding redux js (Redux installed) -->
-    <script src="https://unpkg.com/redux@4.1.2/dist/redux.min.js"></script>
-    <!-- <script src="https://unpkg.com/redux@4.1.2/dist/redux.js"></script> -->
-    <!-- <script  src="index-v2.js"></script> -->
+    <script src="./node_modules/redux/dist/redux.min.js"></script>
+        <!-- <script  src="index-v2.js"></script> -->
     
     <script  src="js/store.js"></script>
     <script  src="js/ui.js"></script>
     <script  src="js/app.js"></script>
 </body>
 </html>
+
+    <!-- Video: NPM webpack modules
+        Sentencias que se utilizan en la terminal:
+        npm init -y //-y siginifica que acepta todas las configuraciones por defecto del proyecto node js
+        //Instalando la dependencia Redux
+        npm install --save redux 
+        //Instalando bootstrap
+        npm install --save bootstrap@version 
+        npm install --save bootstrap@5.1.3   
+        
+        npm install --save bootstrap-icons@1.7.0
+
+    -->
