--- a/index.html
+++ b/index.html
@@ -92,5 +92,7 @@
         npm install --save bootstrap@5.1.3   
         
         npm install --save bootstrap-icons@1.7.0
+        adding .gitignore file, recommended url -> https://www.toptal.com/developers/gitignore
+
 
     -->
